# clean-kedex

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
cleankedex/: pyproject.toml
cleankedex/src/cleankedex/: main.py  routes.py
cleankedex/src/cleankedex/adapters/pokemon/: pokemon_adapter.py
cleankedex/src/cleankedex/api/pokemon/v1/: pokemon_api.py  pokemon_router.py
cleankedex/src/cleankedex/api/pokemon/v1/response/: pokemon_response.py
cleankedex/src/cleankedex/application/pokemon/exceptions/: pokemon_not_found_exception.py
cleankedex/src/cleankedex/config/api/: api_message.py
cleankedex/src/cleankedex/config/application/: di_injector.py  start_app.py
cleankedex/src/cleankedex/config/db/: base_model.py  db_connection_manager.py  db_session.py
cleankedex/src/cleankedex/config/dependency_injection/: di.py
cleankedex/src/cleankedex/config/log/: logging.py
cleankedex/src/cleankedex/config/settings/: settings.py
cleankedex/src/cleankedex/domain/entities/pokemon/: pokemon_entity.py
cleankedex/src/cleankedex/domain/filters/pokemon/: generation.py  name.py  pokedex_id.py  pokemon_type.py
cleankedex/src/cleankedex/domain/models/pokemon/: pokemon_model.py
cleankedex/src/cleankedex/domain/ports/pokemon/: pokemon_port.py
cleankedex/src/cleankedex/utilities/db/: query_operations.py
cleankedex/tests/adapters/pokemon/: test_pokemon_adapter.py
cleankedex/tests/api/v1/pokemon/: test_pokemon_api.py  test_pokemon_read_service.py
cleankedex/tests/api/v1/pokemon/services/: test_pokemon_read_service.py
cleankedex/tests/utilities/: pokemon.py
(+4 files in other folders)
